; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/html/extr_css-parse.c_parse_selector_list.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/html/extr_css-parse.c_parse_selector_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.TYPE_3__* }
%struct.lexbuf = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_3__* (%struct.lexbuf*)* @parse_selector_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_3__* @parse_selector_list(%struct.lexbuf* %0) #0 {
  %2 = alloca %struct.lexbuf*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  store %struct.lexbuf* %0, %struct.lexbuf** %2, align 8
  %5 = load %struct.lexbuf*, %struct.lexbuf** %2, align 8
  %6 = call i8* @parse_selector(%struct.lexbuf* %5)
  %7 = bitcast i8* %6 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %7, %struct.TYPE_3__** %4, align 8
  store %struct.TYPE_3__* %7, %struct.TYPE_3__** %3, align 8
  br label %8

8:                                                ; preds = %12, %1
  %9 = load %struct.lexbuf*, %struct.lexbuf** %2, align 8
  %10 = call i64 @accept(%struct.lexbuf* %9, i8 signext 44)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %20

12:                                               ; preds = %8
  %13 = load %struct.lexbuf*, %struct.lexbuf** %2, align 8
  %14 = call i32 @white(%struct.lexbuf* %13)
  %15 = load %struct.lexbuf*, %struct.lexbuf** %2, align 8
  %16 = call i8* @parse_selector(%struct.lexbuf* %15)
  %17 = bitcast i8* %16 to %struct.TYPE_3__*
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  store %struct.TYPE_3__* %17, %struct.TYPE_3__** %19, align 8
  store %struct.TYPE_3__* %17, %struct.TYPE_3__** %4, align 8
  br label %8

20:                                               ; preds = %8
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  ret %struct.TYPE_3__* %21
}

declare dso_local i8* @parse_selector(%struct.lexbuf*) #1

declare dso_local i64 @accept(%struct.lexbuf*, i8 signext) #1

declare dso_local i32 @white(%struct.lexbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
